# calixto-research-workspace

./: .gitignore  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  PHILOSOPHY.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.md  setup.ps1  setup.sh
.github/workflows/: ci.yml
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/cursor/: README.md
adapters/opencode/: README.md
docs/: README.md  initial-implementation-additional-pass-review.md  initial-implementation-final-final-review.md  initial-implementation-fourth-pass-review.md  initial-implementation-plan-decision-log.md  initial-implementation-plan.md  initial-implementation-review.md  installer.md  methylene-blue-retrospective-enhancement-plan.md  philosophy-compliance-remediation-decision-log.md  philosophy-compliance-remediation-plan.md  research-preparation-skill-plan.md  research-session-reliability-fix-plan.md  self-contained-workspace-redesign-plan.md  streamlined-workspace-creation-decision-log.md  streamlined-workspace-creation-plan.md  toolkit-update-check-before-workspace-decision-log.md
docs/adr/: 001-choose-crawl4ai.md  002-strict-traceability-and-biomedical-routing.md
docs/archive/: initial-implementation-final-review.md  initial-implementation-plan-decision-log.md  initial-implementation-plan.md  initial-implementation-second-pass-review.md  initial-implementation-third-pass-review.md  remaining-issues-fix-plan.md  research-session-ux-followup-plan.md  self-contained-workspace-redesign-plan.md  toolkit-update-check-before-workspace-plan.md
examples/: README.md
examples/sample-workspace/: config.json
providers/scrape/: base.py  crawl4ai_provider.py
providers/search/: base.py  brave.py  duckduckgo.py
runtime/: workspace-manifest.json
runtime/workspace/: .gitignore  AGENTS.md  pyproject.toml  setup.ps1  setup.sh
runtime/workspace/skills/deep-research/: SKILL.md
runtime/workspace/skills/literature-review/: SKILL.md
runtime/workspace/skills/research-preparation/: SKILL.md
scripts/: _common.py  calixto.py  harnesses.py  init_workspace.py  install_calixto_shim.py  installer_core.py  managed_runtime.py  runtime_bundle.py  runtime_probe.py  search_arxiv.py  search_pubmed.py  search_web.py  toolkit_git.py  workspace_info.py
skills/create-skill/: SKILL.md
skills/deep-research/: SKILL.md
skills/integrate-tool/: SKILL.md
skills/literature-review/: SKILL.md
skills/research-preparation/: SKILL.md
skills/research-retrospective/: SKILL.md
templates/workspace/: config.json
tests/: conftest.py  validate_skills.py
tests/golden/: README.md  build_arxiv_cache.py  compare.py  config.json  regenerate_cache.py  run.py
tests/unit/: gen_test_cert.py  installer_test_support.py  test_brave_provider.py  test_calixto_cli.py  test_calixto_shim.py  test_clean_checkout.py  test_common.py  test_compare.py  test_golden_cache.py  test_golden_runner.py  test_harnesses.py  test_install.py  test_install_windows.py  test_installer_core.py  test_managed_runtime.py  test_providers.py  test_setup.py  (+1 more)
(+38 files in other folders)
